cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")
add_definitions(-DDESKTOP_ENV)
project( DisplayImage )
include_directories("ntcore")
include_directories("ntcore/include")
include_directories("ntcore/wpiutil/include")
link_directories("ntcore")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage hsvoptimizer.cpp displayimage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries(DisplayImage ntcore)
